画像表示確認

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="main-visual <%= 'main-visual--signed-in' if user_signed_in? %>">
   <div class="container main-visual__container">
     <div class="main-visual__logo">
-      <%= image_tag(asset_path"522316442926841908.jpg") %>  
+      <%= image_tag "522316442926841908.jpg" %>  
     </div>
     <p class="main-visual__text">
       頑張るあなたの仲間が集う場所。
