--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <%= link_to "マイページ", mypage_path(id: current_user.id) %>
         </li>
         <li>
-          <%= link_to "投稿一覧", post_path %>
+          <%= link_to "投稿一覧", posts_path %>
         </li>
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
