--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -4,7 +4,7 @@
   <p>タイトル：<%= @post.title %></p>
   <p>本文：<%= @post.body %></p>
   <p>投稿ユーザー画像：<p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム：<%= @post.user.name %></p>
+  <p>ユーザーネーム：<%= link_to @post.user.name, mypage_path(@post.user) %></p>
   <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
   <% if @post.user == current_user %>
     <%= link_to "削除", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
