--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-12 col-lg-5 px-5 px-sm-0 mx-auto">
-  <h1>編集画面</h1>
+  <h1>-編集画面-</h1>
   <% if @post.errors.any? %>
     <h3><%= @post.errors.count %>error prohibited this obj form being saved:</h3>
     <ul>
