--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
           <%= link_to "投稿一覧", posts_path %>
         </li>
         <li>
+          <%= link_to "ユーザー一覧", users_path %>
+        </li>
+        <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
