コメントの実装

--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -20,5 +20,6 @@
   <p>タイトル：<%= post.title %></p>
   <p>説明：<%= post.body %></p>
   <p>ユーザーネーム：<%= post.user.name %></p>
+  <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
 </div>
 <% end %>
