--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -10,4 +10,18 @@
     <%= link_to "削除", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
     <%= link_to '編集',edit_post_path(@post.id), class: "btn btn-success" %>
   <% end %>
+  <div>
+    <p>コメント件数：<%= @post.comments.count %></p>
+      <% @post.comments.each do |comment| %>
+        <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
+        <%= comment.user.name %>
+        <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
+      <% end %>
+  </div>
+  <div>
+   <%= form_with model: [@post, @comment] do |f| %>
+     <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+     <%= f.submit "送信する" %>
+   <% end %>
+  </div>
 </div>
