--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,9 +1,16 @@
-<h1>全ユーザー一覧</h1>
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %> - <%= user.email %>
-      <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %> 
-    </li>
-  <% end %>
-</ul>
+<div class="container mt-5">
+  <h1 class="h1">全ユーザー一覧</h1>
+  <ul class="list-group mt-3">
+    <% @users.each do |user| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <div>
+          <%= image_tag user.get_profile_image(50, 50), class: "rounded-circle mr-2" %>
+          <%= user.name %>
+        </div>
+        <div>
+          <%= link_to '詳細', admin_dashboard_path(user), class: "btn btn-primary" %>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
