--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,30 +1,46 @@
-<div>
-  <h1>詳細画面</h1>
-  <%= image_tag @post.get_image %>
-  <p>タイトル：<%= @post.title %></p>
-  <p>本文：<%= @post.body %></p>
-  <p>投稿ユーザー画像：<p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム：<%= link_to @post.user.name, mypage_path(@post.user) %></p>
-  <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
-  <% if @post.user == current_user %>
-    <%= link_to "削除", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-    <%= link_to '編集',edit_post_path(@post.id), class: "btn btn-success" %>
-  <% end %>
-  <div>
-    <p>コメント件数：<%= @post.comments.count %></p>
-      <% @post.comments.each do |comment| %>
-        <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
-        <%= comment.user.name %>
-        <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
-        <% if comment.user == current_user %>
-          <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
-        <% end %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8">
+      <h1 class="mb-3">詳細画面</h1>
+      <%= image_tag @post.get_image, class: "img-fluid rounded mb-3" %>
+      <h2>タイトル: <%= @post.title %></h2>
+      <p>本文: <%= @post.body %></p>
+      <div class="mt-4">
+        <p1>投稿ユーザー画像:</p1><br>
+        <%= image_tag @post.user.get_profile_image(100, 100), class: "rounded-circle img-fluid mt-2" %>
+      </div>
+      <p class="mt-3">ユーザーネーム: <%= link_to @post.user.name, mypage_path(@post.user) %></p>
+      <p>投稿日: <%= @post.created_at.strftime('%Y/%m/%d') %></p>
+      <% if @post.user == current_user %>
+        <div class="mt-4">
+          <%= link_to "削除", post_path(@post), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger mr-2" %>
+          <%= link_to '編集',edit_post_path(@post.id), class: "btn btn-success" %>
+        </div>
       <% end %>
-  </div>
-  <div>
-   <%= form_with model: [@post, @comment] do |f| %>
-     <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
-     <%= f.submit "送信する" %>
-   <% end %>
+    </div>
+    <div class="col-md-4">
+      <div class="card mt-3">
+        <div class="card-body">
+          <h3 class="mb-3">コメント</h3>
+          <p class="mb-2">コメント件数: <%= @post.comments.count %></p>
+          <% @post.comments.each do |comment| %>
+            <div class="comment mb-3">
+              <%= image_tag comment.user.get_profile_image(50, 50), class: "rounded-circle float-left mr-3" %>
+              <p class="font-weight-bold"><%= comment.user.name %> | <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %></p>
+              <p><%= comment.body %></p>
+              <% if comment.user == current_user %>
+                <%= link_to "削除", post_comment_path(@post, comment), method: :delete, class: "btn btn-sm btn-danger" %>
+              <% end %>
+            </div>
+          <% end %>
+          <div class="mt-3">
+            <%= form_with model: [@post, @comment] do |f| %>
+              <%= f.text_area :body, rows: '3', placeholder: "コメントをここに入力してください", class: "form-control mb-2" %>
+              <%= f.submit "送信", class: "btn btn-primary" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
