--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h2 class>新規登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
+   <div class="form__container">
+      <div class="sign-in__form-grid">
+        <p class="form__text">アカウントをお持ちの方は<%= link_to 'こちら', new_user_session_path, class: 'form__link' %></p>
+        
+        <div class="field">
+         <%= f.label :name %>
+         <%= f.email_field :name, autofocus: true, autocomplete: "name" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+        <div class="field">
+         <%= f.label :email %>
+         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+        <div class="field">
+         <%= f.label :password %>
+         <% if @minimum_password_length %>
+         <em>(<%= @minimum_password_length %> characters minimum)</em>
+         <% end %>
+         <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+        <div class="field">
+         <%= f.label :password_confirmation %>
+         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+        <div class="actions">
+         <%= f.submit "新規登録" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
