--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,11 +1,14 @@
-<h2>プロフィール編集</h2>
-<%= form_with model: @user, url: user_path(@user), method: :patch do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <%= f.submit "変更を保存" %>
-<% end %>
-<div>
-   <p><%= link_to "退会", user_path(current_user.id) %></p>
+<div class="container mt-5">
+  <h2 class="h2">プロフィール編集</h2>
+  <%= form_with model: @user, url: user_path(@user), method: :patch, class: "mt-3" do |f| %>
+    <div class="form-group">
+      <label for="inputName">Name</label>
+      <%= f.text_field :name, autofocus: true, id: "inputName", class: "form-control", placeholder: "名前" %>
+    </div>
+    <div class="form-group">
+      <label for="inputImage">ProfileImage</label>
+      <%= f.file_field :profile_image, class: "form-control-file", accept: "image/*" %>
+    </div>
+    <%= f.submit "変更を保存", class: "btn btn-primary" %>
+  <% end %>
 </div>
