--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,16 +1,27 @@
-<h1>ユーザー一覧</h1>
+<div class="container mt-5">
+  <h1 class="h1">ユーザー一覧</h1>
 
-<%= form_tag(users_path, method: :get) do %>
-  <%= text_field_tag :search, params[:search], placeholder: "ユーザーを検索" %>
-  <%= submit_tag "検索" %>
-<% end %>
+  <%= form_tag(users_path, method: :get, class: "mt-3") do %>
+    <div class="input-group">
+      <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "ユーザーを検索" %>
+      <div class="input-group-append">
+        <%= submit_tag "検索", class: "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
 
-<% if @users.present? %>
-  <ul>
-    <% @users.each do |user| %>
-      <li><%= user.name %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>該当するユーザーが見つかりません。</p>
-<% end %>
+  <% if @users.present? %>
+    <ul class="list-group mt-3">
+      <% @users.each do |user| %>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <%= link_to mypage_path(user) do %>
+            <%= image_tag user.get_profile_image(50, 50), class: "rounded-circle mr-2" %>
+            <%= user.name %>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p class="mt-3">該当するユーザーが見つかりません。</p>
+  <% end %>
+</div>
